Revision history for STEVEB-Dist-Mgr

0.04 UNREL
        - Added git_ignore()
        - Added remove_unwanted_files()

0.03    2020-12-22
        - Test release
        - Added ci_github()
        - Added ci_badges()
        - Added manifest_skip()

0.02    2020-12-22
        - Added add_repository() and add_bugtracker()
        - This is another formatting check on MetaCPAN

0.01    2020-12-22
        - Initial release; Much more to add, just checking POD formatting etc.
