@@ -3,6 +3,7 @@ Revision history for STEVEB-Dist-Mgr
 0.04 UNREL
         - Added git_ignore()
         - Added remove_unwanted_files()
+        - Added init(), creates the actual distribution directory structure
 
 0.03    2020-12-22
         - Test release
